# examples

./: README.md
cpp/boost/cmake-version-check/: CMakeLists.txt
cpp/boost/ipc/: CMakeLists.txt  Vector3.hpp  publisher.cpp  receiver.cpp
cpp/catch/: CMakeLists.txt
cpp/catch/src/: mean.cpp  mean.hpp  mean.test.cpp
cpp/lang/constexpr/: CMakeLists.txt  array.cpp  array_python.cpp  constants_preprocessor.py
cpp/lang/crtp/: CMakeLists.txt  helper_crtp.cpp  simple_crtp.cpp
cpp/lang/references/: CMakeLists.txt  mutate-elements-in-container.cpp
cpp/lang/visitor_pattern/: CMakeLists.txt  main.cpp
cpp/meson/: main.cpp  meson.build
cpp/zeroMQ/: CMakeLists.txt
cpp/zeroMQ/hello-world/: CMakeLists.txt  client.cpp  server.cpp
cpp/zeroMQ/weather-station/: CMakeLists.txt  client.cpp  server.cpp
csharp/configurable/: ConfigurableAttribute.cs  ConfigurableFactory.cs  Program.cs
csharp/lang/async/example/: Program.cs
octave/: CMakeLists.txt  mex_create.cpp  mex_get.cpp  mex_release.cpp  mex_utilities.hpp  shared_workspace.cpp  shared_workspace.h
octave/scripts/: shared_workspace_example.m
python/ctypes/: CMakeLists.txt  my_lib.cpp  my_lib.hpp  my_python_script.py
